t10_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-05-12T08:08:47Z"
  labels:
    run: sa-pod
  name: sa-pod
  namespace: default
  resourceVersion: "1013"
  uid: 9f59f272-4097-4ae0-be35-6e65a0a22ced
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: sa-pod
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /etc/secret
      name: admin-token
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-mhn47
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: admin-token
    projected:
      sources:
      - serviceAccountToken:
          path: admin-token
          expirationSeconds: 7200
          audience: admin
  - name: kube-api-access-mhn47
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:35Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:35Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://c6225d1208b6a60a1c901a7260b9f325c6920e7cccfa8737e03a1f94b8f01d2a
    image: nginx:latest
    imageID: docker-pullable://nginx@sha256:32e76d4f34f80e479964a0fbd4c5b4f6967b5322c8d004e9cf0cb81c93510766
    lastState: {}
    name: sa-pod
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-05-12T08:09:35Z"
  hostIP: 192.168.49.2
  phase: Running
  podIP: 10.244.0.16
  podIPs:
  - ip: 10.244.0.16
  qosClass: BestEffort
  startTime: "2024-05-12T08:08:47Z"
