t5.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
  - name: webserver
    image: httpd
    resources:
      requests:
        memory: "512Mi"
        cpu: 0.5
