t7.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-05-12T08:08:47Z"
  labels:
    run: database
  name: database
  namespace: dev
  resourceVersion: "988"
  uid: 4097a8ca-00c9-4f1b-a04d-334d550843f7
spec:
  containers:
  - image: redis
    imagePullPolicy: Always
    name: database
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
      - name: super-secret-vol
        readOnly: true
        mountPath: "/db/credential"
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-82xwc
        readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: super-secret-vol
    secret:
      secretName: super-secret
  - name: kube-api-access-82xwc
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:26Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:26Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://7991e8658de9b624adce167c2d622f0e562c550802511ee505835aad87894fcc
    image: redis:latest
    imageID: docker-pullable://redis@sha256:f14f42fc7e824b93c0e2fe3cdf42f68197ee0311c3d2e0235be37480b2e208e6
    lastState: {}
    name: database
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-05-12T08:09:26Z"
  hostIP: 192.168.49.2
  phase: Running
  podIP: 10.244.0.11
  podIPs:
  - ip: 10.244.0.11
  qosClass: BestEffort
  startTime: "2024-05-12T08:08:47Z"
