t8_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-05-12T08:08:47Z"
  labels:
    run: config-pod
  name: config-pod
  namespace: default
  resourceVersion: "992"
  uid: 21413e6d-4a54-4c36-9400-4d7d032a0367
spec:
  containers:
  - image: redis
    imagePullPolicy: Always
    name: config-pod
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-rbmcq
      readOnly: true
    - name: secret-coach-volume
      mountPath:  "/etc/config"
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: secret-coach-volume
    configMap:
      name: secret-coach
      items:
      - key: "secret-coach.txt"
        path: "secret-coach.txt"
  - name: kube-api-access-rbmcq
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:29Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:09:29Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-05-12T08:08:47Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://e559e4a314b3b9f6da2aa7b87e1106a36cb3a5351ccd2767cf0caeef6cb47d77
    image: redis:latest
    imageID: docker-pullable://redis@sha256:f14f42fc7e824b93c0e2fe3cdf42f68197ee0311c3d2e0235be37480b2e208e6
    lastState: {}
    name: config-pod
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-05-12T08:09:28Z"
  hostIP: 192.168.49.2
  phase: Running
  podIP: 10.244.0.12
  podIPs:
  - ip: 10.244.0.12
  qosClass: BestEffort
  startTime: "2024-05-12T08:08:47Z"
